2009-10-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Download lrc files in seperate child processes

2009-09-17  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_unmap): Fix issue #16

2009-09-14  Tiger Soldier  <tigersoldi@gmail.com>
	* New icons, we can throw the icon of WMP away now!

	* src/ol_player_exaile.c: Exaile support

	* src/ol_elapse_emulator.c (ol_elapse_emulator_get_last_ms): Get last real ms, added for pause purpose

2009-09-12  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_ui.c : download handler is half complete

2009-08-31  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_utils.c: 

2009-08-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_qianqian.c: Uses new lrc compare algorithm

	* src/ol_lrc_fetch_utils.c: Adds new lrc comare algorithm

	* src/ol_utils.c: Adds LCS function to calculate largest common subsequence

	* src/ol_lrc_fetch_sogou.c: Uses new lrc compare algorithm

2009-08-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Fix the bug that the lyric is not set when downloading succeeds

2009-08-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: Add download engine support for perference

2009-08-26  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch.c: Add multiple download engines support

	* src/ol_lrc_fetch_qianqian.c: Add Qianqian download engine

2009-08-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_config.c: signature of `changed' signal of ol_config is changed
	Use real group name of each config item instead of ``OSD''

	* src/ol_osd_window.c: Update lyrics once font family or size is set
	Make lyrics transparent when the mouse pointer is actually over lyrics instead of over osd window

2009-08-16  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: Add visible support

	* src/ol_osd_window.c: Fix bug that crashes when setting width before realized

	* src/ol_keybindings.c: Basic keybinding support
